@@ -270,4 +270,5 @@ version 4.13 (2015-04-07)
 
 version 4.14 (2015-04-13)
     * Adds support for response_mode authorisation request parameter (iss #53).
-    
+    * Permits redirect_uri in request_object / request_uri of OpenID Connect
+      authentication request (iss #113).
